PLANET-7281 Add trailing slash to self assigned canonical URLs
- Added the trailing slash to self assigned canonical urls

--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -30,6 +30,9 @@
     {% endif %}
 
     {% if canonical_link %}
+        {% if canonical_link|last != '/' %}
+            {% set canonical_link = canonical_link ~ '/' %}
+        {% endif %}
         <link rel="canonical" href="{{ canonical_link }}">
     {% endif %}
 
