PLANET-7268 Add relevant meta fields to all listing pages
These are needed for better SEO

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -1,6 +1,6 @@
 {% block html_head_container %}
 
-{% include 'html-header.twig' with { 'canonical_link': canonical_link } %}
+{% include 'html-header.twig' %}
 
 {% endblock %}
 
